# buildkit-client

./: .envrc.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  PROTO_SETUP.md  QUICKSTART.md  README.md  buf.gen.yaml  buf.yaml  build.rs  docker-compose.yml  release-plz.toml  test.sh
.cargo/: config.toml
.github/: buildkitd.toml
.github/workflows/: ci.yml  release-plz.yml  test.yml
benches/: build_bench.rs
crates/bkit/: CHANGELOG.md  Cargo.toml
crates/bkit/src/: lib.rs
crates/filemode/: CHANGELOG.md  Cargo.toml  README.md
crates/filemode/src/: lib.rs
dev/bench/: data.js
docs/: ARCHITECTURE.md  DEVELOPMENT.md  USAGE.md
proto/api/services/control/: control.proto
proto/frontend/gateway/pb/: gateway.proto
proto/github.com/planetscale/vtprotobuf/vtproto/: ext.proto
proto/solver/errdefs/: errdefs.proto
proto/solver/pb/: ops.proto
proto/sourcepolicy/pb/: policy.proto
proto/sourcepolicy/policysession/: policysession.proto
scripts/: init-proto.sh
src/: builder.rs  client.rs  lib.rs  main.rs  progress.rs  proto.rs  session.rs  solve.rs
src/session/: attachable.rs  auth.rs  diffcopy.rs  filesync.rs  grpc_tunnel.rs  mod.rs  secrets.rs  server.rs  simple.rs
tests/: builder_test.rs  dfs_order_test.rs  integration_test.rs  progress_test.rs  proto_test.rs  session_test.rs
tests/common/: mod.rs
